# ibus

./: configure.ac
bus/: engineproxy.c  engineproxy.h  inputcontext.c
client/: Makefile.am
client/gtk2/: ibusimcontext.c
client/wayland/: Makefile.am  main.c
data/dconf/: Makefile.am
dconf/: config.c  dconf.xml.in.in
ibus/interface/: iengine.py
src/: ibusengine.c  ibusengine.h  ibusenginedesc.c  ibusenginedesc.h  ibusinputcontext.c  ibusinputcontext.h  ibusmarshalers.list
